Update some adjustments